# github-actionspec-rs

./: .dockerignore  .gitignore  .mise.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  action.yml  docker-bake.hcl  justfile
.github/actionspec/ci/: main.cue
.github/filters/: changes.yml
.github/workflows/: ci-test.yml  ci.yml  pages.yml
docs/: ci-reference.html  examples.html  getting-started.html  index.html  reports.html  styles.css  troubleshooting.html  workflow-flow.html
schema/: declaration.cue  workflow_run.cue
scripts/action/: entrypoint.sh
scripts/docker/: run-runtime.sh  run.sh
src/: bootstrap.rs  capture.rs  cli.rs  contracts.rs  dashboard.rs  discovery.rs  errors.rs  fs_utils.rs  lib.rs  main.rs  types.rs  validate.rs  workflow_calls.rs
tests/: action_entrypoint.rs  bootstrap.rs  bootstrap_benchmark.rs  capture.rs  dashboard.rs  discover.rs  real_cue.rs  validate.rs  validate_callers.rs  validate_repo.rs
tests/fixtures/build-infrastructure/: staging-missing-validator-tag.json  staging-tests-passed-but-failed-jobs.json
tests/fixtures/build-infrastructure/passing/: staging-success.json  staging-tests-failed-no-promote.json
tests/fixtures/ci/: ci-build-skipped.json  ci-main-pages.json  ci-non-main-ref.json  ci-pages-enabled-but-skipped.json  ci-run-ci-disabled-build-ran.json
tests/fixtures/ci/passing/: ci-main-noop.json  ci-main-success.json
tests/fixtures/repos/factmachine-monorepo/.github/actionspec/build-infrastructure/: staging.cue
tests/support/: mod.rs
