[package]
name = "github-actionspec-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI for validating GitHub Actions workflow contracts expressed in CUE."

[[bin]]
name = "github-actionspec"
path = "src/main.rs"

[lib]
name = "github_actionspec_rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "=4.5.31", features = ["derive"] }
regex = "=1.11.1"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
thiserror = "=2.0.12"
walkdir = "=2.5.0"

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.4"
tempfile = "=3.27.0"
