[package]
name = "github-actionspec-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI for validating GitHub Actions workflow contracts expressed in CUE."

[[bin]]
name = "github-actionspec"
path = "src/main.rs"

[lib]
name = "github_actionspec_rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "=4.6.0", features = ["derive"] }
glob = "=0.3.3"
regex = "=1.12.3"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.143"
serde_yaml = "=0.9.34"
thiserror = "=2.0.18"
walkdir = "=2.5.0"

[dev-dependencies]
assert_cmd = "=2.2.1"
predicates = "=3.1.4"
tempfile = "=3.27.0"
